[metadata]
name = provisions
version = 0.1.0
author = Jesse Posner
author_email = jesse.posner@gmail.com
description = Privacy-preserving Proofs of Solvency implementation using secp256k1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jesseposner/provisions
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    # Add runtime dependencies here

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    *.tests
    *.tests.*

[options.extras_require]
dev =
    black
    flake8
    mypy
    pytest
    hypothesis
    pytest-cov

[flake8]
ignore = E203
